--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "bcrypt": "^0.8.7",
     "bcrypt-as-promised": "^1.1.0",
     "body-parser": "^1.15.2",
+    "connect-ensure-login": "^0.1.1",
     "connect-redis": "^3.1.0",
     "cookie-parser": "^1.4.3",
+    "ejs": "^2.5.2",
     "express": "^4.14.0",
     "express-session": "^1.14.1",
     "gulp": "^3.9.1",
